SET(BTKLZO_SRCS
  btklzo/src/btklzo.cpp
)

# DUE TO THE USE OF THE LGPL LICENSE BY FFPMEG, THIS LIBRARY MUST BE COMPILED
# EVERYTIME AS A SHARED LIBRARY
ADD_LIBRARY(btklzo SHARED ${BTKLZO_SRCS})

TARGET_INCLUDE_DIRECTORIES(btklzo PUBLIC
  $<BUILD_INTERFACE:${BTK_BINARY_DIR}>
  $<BUILD_INTERFACE:${BTK_SOURCE_DIR}/ThirdParties/eigen3>
  $<INSTALL_INTERFACE:include/btk>
)

GENERATE_EXPORT_HEADER(btklzo
                       BASE_NAME BTK_LZO
                       EXPORT_FILE_NAME btklzoExport.h)

INSTALL(TARGETS btklzo EXPORT BTKTargets
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  RUNTIME DESTINATION bin
  INCLUDES DESTINATION include
)

INSTALL(
  FILES 
    ${CMAKE_CURRENT_SOURCE_DIR}/btklzo/include/btklzo.h
  DESTINATION include
  COMPONENT dev
)